feat: add authentication

--- a/.env
+++ b/.env
@@ -14,3 +14,5 @@ POSTGRES_PASSWORD="npg_A7i2VXOglauM"
 POSTGRES_DATABASE="neondb"
 POSTGRES_URL_NO_SSL="postgres://neondb_owner:npg_A7i2VXOglauM@ep-soft-pine-a1c3he82-pooler.ap-southeast-1.aws.neon.tech/neondb"
 POSTGRES_PRISMA_URL="postgres://neondb_owner:npg_A7i2VXOglauM@ep-soft-pine-a1c3he82-pooler.ap-southeast-1.aws.neon.tech/neondb?pgbouncer=true&connect_timeout=15&sslmode=require"
+NEXTAUTH_SECRET=a73029a20c89b46a22c59e4f4ac4bf46
+NEXTAUTH_URL=http://localhost:3000
