--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
-    "bcryptjs": "^3.0.2",
+    "bcrypt": "^5.1.1",
     "date-fns": "^4.1.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.10.2",
     "next": "13.5.1",
+    "next-auth": "^4.24.11",
     "postcss": "8.4.30",
     "postgres": "^3.4.5",
     "react": "18.2.0",
@@ -33,5 +34,8 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2"
   }
 }
